SGTRR-397 Create new cardlet: Broken input fields / placeholders: Fixed forms on editCardletList

--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -2541,7 +2541,27 @@ input[disabled] {
     line-height: inherit;
     font-weight: normal;
 }
+
 input::-ms-clear {
     display: none;
 }
 
+.alert-success {
+    z-index: 100;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.cardl.custom-placeholder {
+    left: 15px;
+    top: 30px;
+}
+
+.custom-placeholder.top {
+    top: 15px;
+}
+
+.input-text-div .custom-placeholder {
+    top: 15px;
+}
